chore: fix light and dark mode colour scheme

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,6 +15,16 @@
   --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.2);
 }
 
+.dark-mode {
+  --primary-color: #1e2a5e;
+  --secondary-color: #c3ac7c;
+  --tertiary-color: #7c93c3;
+  --forth-color: #55679c;
+  --fifth-color: #e1d7b7;
+
+  --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.2);
+}
+
 body {
   font-family: tahoma, sans-serif;
   font-size: 1.1rem;
@@ -59,19 +69,19 @@ section {
 
 .sec2 {
   display: none;
-  background-color: var(--tertiary-color);
+  background-color: var(--primary-color);
   transform: translateY(0) scale(1);
 }
 
 .sec3 {
   display: none;
-  background-color: var(--forth-color);
+  background-color: var(--primary-color);
   transform: translateY(0) scale(1);
 }
 
 .sec4 {
   display: none;
-  background-color: var(--tertiary-color);
+  background-color: var(--primary-color);
   transform: translateY(0) scale(1);
 }
 
@@ -117,7 +127,7 @@ section {
   .control {
     padding: 1rem;
     cursor: pointer;
-    background-color: var(--black-color);
+    background-color: var(--tertiary-color);
     width: 55px;
     height: 55px;
     border-radius: 50%;
@@ -312,16 +322,20 @@ section {
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
   margin-top: 3rem;
+
   .portfolio-item {
     position: relative;
     border-radius: 15px;
+    background-color: var(--primary-color);
+    border: solid 1px var(--secondary-color);
     .image {
       border-radius: 15px;
+      height: 200px;
       img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
         border-radius: 15px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     }
     .hover-items {
